Add range view filtering for tournaments
+ Introduced `TourCalRangeViewFilter` for filtering tournaments by range view.
+ Unified `TournamentFilter` interface for filtering logic.
+ Integrated multiple filters (range view, age class) in the tournament calendar view.
+ Added event-based refresh mechanism and linked UI components.